[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/MovingPlatform.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/colored_transparent_fixed.png-283f78511b4a6b33f0a339a4356a77fb.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 3 )

[sub_resource type="Animation" id=3]
resource_name = "moving_left"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MovingPlatformSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -25, 0 ), Vector2( 0, 0 ), Vector2( 25, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "moving_right"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MovingPlatformSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 25, 0 ), Vector2( 0, 0 ), Vector2( -25, 0 ), Vector2( 0, 0 ) ]
}

[node name="MovingPlatform" type="Node2D" groups=[
"platform",
]]
script = ExtResource( 1 )

[node name="MovingPlatformSprite" type="Sprite" parent="." groups=[
"platform",
]]
position = Vector2( -20, 0 )
scale = Vector2( 3.5, 1 )
texture = SubResource( 1 )
vframes = 32
hframes = 32
frame = 500

[node name="MovingPlatformBody" type="KinematicBody2D" parent="MovingPlatformSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatformSprite/MovingPlatformBody" groups=[
"platform",
]]
scale = Vector2( 0.285714, 1 )
shape = SubResource( 2 )

[node name="MovingPlatformAnim" type="AnimationPlayer" parent="."]
anims/moving_left = SubResource( 3 )
anims/moving_right = SubResource( 4 )
[connection signal="animation_finished" from="MovingPlatformAnim" to="." method="_on_MovingPlatformAnim_animation_finished"]
